[package]
name = "rs-edunode-sdk"
version = "0.1.1"
edition = "2021"
description = "The edunode SDK for rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["serde"] }
serde = { version = "1.0.*", default-features = false }
postcard = { version = "1.0.4", features = ["alloc"] }
thiserror-no-std = "2.0.2"
soroban-sdk = "0.8.4"
wee_alloc = "0.4.5"
tokio = { version = "1", features = ["full"] }
ipfs-api = "0.17.0"

[dev_dependencies]
soroban-sdk = { version = "0.8.4", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
